// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chart renders correctly when chart is hovered 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  0% {
    opacity: 1;
  }

  50% {
    opacity: 0.1;
  }

  100% {
    opacity: 1;
  }
}

.cache-zjik7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-1pk1k4u {
  display: none;
}

@media (min-width: 576px) {
  .cache-1pk1k4u {
    display: block;
  }
}

.cache-jvd5z6.cache-jvd5z6 {
  width: 206px;
  height: 206px;
  position: relative;
}

.cache-3ay86l {
  transform-origin: 50% 50%;
  -webkit-transition: stroke-width 500ms ease;
  transition: stroke-width 500ms ease;
  stroke: #dce1eb;
  stroke-width: 18;
  stroke-linecap: butt;
  fill: none;
  cursor: pointer;
  stroke-dasharray: 566 10 0;
  -webkit-transform: rotate(deg);
  -moz-transform: rotate(deg);
  -ms-transform: rotate(deg);
  transform: rotate(deg);
}

.cache-bkkt8z {
  transform-origin: 50% 50%;
  -webkit-transition: stroke-width 500ms ease;
  transition: stroke-width 500ms ease;
  stroke: #4F1A81;
  stroke-width: 23;
  stroke-linecap: butt;
  fill: none;
  cursor: pointer;
  stroke-dasharray: 283 566 10 0;
  -webkit-transform: rotate(0deg);
  -moz-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.cache-1n8z37h {
  transform-origin: 50% 50%;
  -webkit-transition: stroke-width 500ms ease;
  transition: stroke-width 500ms ease;
  stroke: #F4306C;
  stroke-width: 18;
  stroke-linecap: butt;
  fill: none;
  cursor: pointer;
  stroke-dasharray: 283 566 10 0;
  -webkit-transform: rotate(180deg);
  -moz-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.cache-esyp20 {
  font-size: 14px;
  list-style-type: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  cursor: pointer;
  height: -webkit-min-content;
  height: -moz-min-content;
  height: min-content;
}

.cache-1266m55 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 8px;
  width: 100%;
  color: #4f0599;
}

.cache-ki8u62 {
  width: 250px;
  height: 21px;
  position: absolute;
}

.cache-1fum7c4 {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  margin: 0 8px;
  background: #4F1A81;
  -webkit-animation: animation-0 linear 1500ms infinite;
  animation: animation-0 linear 1500ms infinite;
}

.cache-lvt6sf {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.cache-o07ik5 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 6px;
  font-weight: 500;
}

.cache-1g4cu73 {
  border-bottom: 1px solid #dce1eb;
  position: relative;
  width: 100%;
}

.cache-1rp01lo {
  border-bottom: 1px solid #4f0599;
  position: absolute;
  left: 0;
  top: 0;
  bottom: -1px;
  -webkit-transition: width 500ms ease;
  transition: width 500ms ease;
  width: 100%;
}

.cache-bzjscf {
  margin-left: 6px;
  font-weight: 500;
}

.cache-v2j833 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 8px;
  width: 100%;
  color: #4a4f62;
}

.cache-18thr6o {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  margin: 0 8px;
  background: #F4306C;
}

.cache-cowp5h {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 6px;
  font-weight: 400;
}

.cache-15dkpmo {
  border-bottom: 1px solid #4f0599;
  position: absolute;
  left: 0;
  top: 0;
  bottom: -1px;
  -webkit-transition: width 500ms ease;
  transition: width 500ms ease;
  width: 0%;
}

.cache-11jdo8f {
  margin-left: 6px;
  font-weight: 400;
}

<div
    class="cache-zjik7 emdn0ly1"
  >
    <div
      class="cache-1pk1k4u e18983st0"
    >
      <div
        class="cache-jvd5z6 e7ah3bn0"
      >
        <svg
          style="height: 206px; transform: rotate(-90deg); width: 206px;"
        >
          <defs />
          <circle
            class="cache-3ay86l e1tz6nb31"
            color="gray300"
            cx="103"
            cy="103"
            r="90"
            style="cursor: default;"
          />
          <circle
            class="cache-bkkt8z e1tz6nb31"
            color="#4F1A81"
            cx="103"
            cy="103"
            data-testid="test-chart-donut-compute"
            r="90"
          />
          <circle
            class="cache-1n8z37h e1tz6nb31"
            color="#F4306C"
            cx="103"
            cy="103"
            data-testid="test-chart-donut-gpu"
            r="90"
          />
        </svg>
      </div>
    </div>
    <ul
      class="cache-esyp20 efhpw7g8"
    >
      <div
        aria-describedby="test-chart-chart-tooltip-compute"
        tabindex="0"
      >
        <li
          class="cache-1266m55 efhpw7g7"
        >
          <div
            class="cache-ki8u62 efhpw7g2"
            data-testid="test-chart-chart-tooltip-compute"
          />
          <div
            class="cache-1fum7c4 efhpw7g6"
            color="#4F1A81"
          />
          <div
            class="cache-lvt6sf efhpw7g5"
          >
            <span
              class="cache-o07ik5 efhpw7g3"
            >
              Compute
            </span>
            <span
              class="cache-1g4cu73 efhpw7g1"
            >
              <span
                class="cache-1rp01lo efhpw7g0"
              />
            </span>
          </div>
          <div
            class="cache-bzjscf efhpw7g4"
          >
            20
          </div>
        </li>
      </div>
      <div
        aria-describedby="test-chart-chart-tooltip-gpu"
        tabindex="0"
      >
        <li
          class="cache-v2j833 efhpw7g7"
        >
          <div
            class="cache-ki8u62 efhpw7g2"
            data-testid="test-chart-chart-tooltip-gpu"
          />
          <div
            class="cache-18thr6o efhpw7g6"
            color="#F4306C"
          />
          <div
            class="cache-lvt6sf efhpw7g5"
          >
            <span
              class="cache-cowp5h efhpw7g3"
            >
              GPU Instances
            </span>
            <span
              class="cache-1g4cu73 efhpw7g1"
            >
              <span
                class="cache-15dkpmo efhpw7g0"
              />
            </span>
          </div>
          <div
            class="cache-11jdo8f efhpw7g4"
          >
            20
          </div>
        </li>
      </div>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`Chart renders correctly when legend is focused 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  0% {
    opacity: 1;
  }

  50% {
    opacity: 0.1;
  }

  100% {
    opacity: 1;
  }
}

.cache-zjik7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-1pk1k4u {
  display: none;
}

@media (min-width: 576px) {
  .cache-1pk1k4u {
    display: block;
  }
}

.cache-jvd5z6.cache-jvd5z6 {
  width: 206px;
  height: 206px;
  position: relative;
}

.cache-3ay86l {
  transform-origin: 50% 50%;
  -webkit-transition: stroke-width 500ms ease;
  transition: stroke-width 500ms ease;
  stroke: #dce1eb;
  stroke-width: 18;
  stroke-linecap: butt;
  fill: none;
  cursor: pointer;
  stroke-dasharray: 566 10 0;
  -webkit-transform: rotate(deg);
  -moz-transform: rotate(deg);
  -ms-transform: rotate(deg);
  transform: rotate(deg);
}

.cache-bkkt8z {
  transform-origin: 50% 50%;
  -webkit-transition: stroke-width 500ms ease;
  transition: stroke-width 500ms ease;
  stroke: #4F1A81;
  stroke-width: 23;
  stroke-linecap: butt;
  fill: none;
  cursor: pointer;
  stroke-dasharray: 283 566 10 0;
  -webkit-transform: rotate(0deg);
  -moz-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.cache-1n8z37h {
  transform-origin: 50% 50%;
  -webkit-transition: stroke-width 500ms ease;
  transition: stroke-width 500ms ease;
  stroke: #F4306C;
  stroke-width: 18;
  stroke-linecap: butt;
  fill: none;
  cursor: pointer;
  stroke-dasharray: 283 566 10 0;
  -webkit-transform: rotate(180deg);
  -moz-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.cache-esyp20 {
  font-size: 14px;
  list-style-type: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  cursor: pointer;
  height: -webkit-min-content;
  height: -moz-min-content;
  height: min-content;
}

.cache-1266m55 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 8px;
  width: 100%;
  color: #4f0599;
}

.cache-ki8u62 {
  width: 250px;
  height: 21px;
  position: absolute;
}

.cache-1fum7c4 {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  margin: 0 8px;
  background: #4F1A81;
  -webkit-animation: animation-0 linear 1500ms infinite;
  animation: animation-0 linear 1500ms infinite;
}

.cache-lvt6sf {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.cache-o07ik5 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 6px;
  font-weight: 500;
}

.cache-1g4cu73 {
  border-bottom: 1px solid #dce1eb;
  position: relative;
  width: 100%;
}

.cache-1rp01lo {
  border-bottom: 1px solid #4f0599;
  position: absolute;
  left: 0;
  top: 0;
  bottom: -1px;
  -webkit-transition: width 500ms ease;
  transition: width 500ms ease;
  width: 100%;
}

.cache-bzjscf {
  margin-left: 6px;
  font-weight: 500;
}

.cache-v2j833 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 8px;
  width: 100%;
  color: #4a4f62;
}

.cache-18thr6o {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  margin: 0 8px;
  background: #F4306C;
}

.cache-cowp5h {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 6px;
  font-weight: 400;
}

.cache-15dkpmo {
  border-bottom: 1px solid #4f0599;
  position: absolute;
  left: 0;
  top: 0;
  bottom: -1px;
  -webkit-transition: width 500ms ease;
  transition: width 500ms ease;
  width: 0%;
}

.cache-11jdo8f {
  margin-left: 6px;
  font-weight: 400;
}

<div
    class="cache-zjik7 emdn0ly1"
  >
    <div
      class="cache-1pk1k4u e18983st0"
    >
      <div
        class="cache-jvd5z6 e7ah3bn0"
      >
        <svg
          style="height: 206px; transform: rotate(-90deg); width: 206px;"
        >
          <defs />
          <circle
            class="cache-3ay86l e1tz6nb31"
            color="gray300"
            cx="103"
            cy="103"
            r="90"
            style="cursor: default;"
          />
          <circle
            class="cache-bkkt8z e1tz6nb31"
            color="#4F1A81"
            cx="103"
            cy="103"
            data-testid="test-chart-donut-compute"
            r="90"
          />
          <circle
            class="cache-1n8z37h e1tz6nb31"
            color="#F4306C"
            cx="103"
            cy="103"
            data-testid="test-chart-donut-gpu"
            r="90"
          />
        </svg>
      </div>
    </div>
    <ul
      class="cache-esyp20 efhpw7g8"
    >
      <div
        aria-describedby="test-chart-chart-tooltip-compute"
        tabindex="0"
      >
        <li
          class="cache-1266m55 efhpw7g7"
        >
          <div
            class="cache-ki8u62 efhpw7g2"
            data-testid="test-chart-chart-tooltip-compute"
          />
          <div
            class="cache-1fum7c4 efhpw7g6"
            color="#4F1A81"
          />
          <div
            class="cache-lvt6sf efhpw7g5"
          >
            <span
              class="cache-o07ik5 efhpw7g3"
            >
              Compute
            </span>
            <span
              class="cache-1g4cu73 efhpw7g1"
            >
              <span
                class="cache-1rp01lo efhpw7g0"
              />
            </span>
          </div>
          <div
            class="cache-bzjscf efhpw7g4"
          >
            20
          </div>
        </li>
      </div>
      <div
        aria-describedby="test-chart-chart-tooltip-gpu"
        tabindex="0"
      >
        <li
          class="cache-v2j833 efhpw7g7"
        >
          <div
            class="cache-ki8u62 efhpw7g2"
            data-testid="test-chart-chart-tooltip-gpu"
          />
          <div
            class="cache-18thr6o efhpw7g6"
            color="#F4306C"
          />
          <div
            class="cache-lvt6sf efhpw7g5"
          >
            <span
              class="cache-cowp5h efhpw7g3"
            >
              GPU Instances
            </span>
            <span
              class="cache-1g4cu73 efhpw7g1"
            >
              <span
                class="cache-15dkpmo efhpw7g0"
              />
            </span>
          </div>
          <div
            class="cache-11jdo8f efhpw7g4"
          >
            20
          </div>
        </li>
      </div>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`Chart renders correctly when legend is hovered 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  0% {
    opacity: 1;
  }

  50% {
    opacity: 0.1;
  }

  100% {
    opacity: 1;
  }
}

.cache-zjik7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-1pk1k4u {
  display: none;
}

@media (min-width: 576px) {
  .cache-1pk1k4u {
    display: block;
  }
}

.cache-jvd5z6.cache-jvd5z6 {
  width: 206px;
  height: 206px;
  position: relative;
}

.cache-3ay86l {
  transform-origin: 50% 50%;
  -webkit-transition: stroke-width 500ms ease;
  transition: stroke-width 500ms ease;
  stroke: #dce1eb;
  stroke-width: 18;
  stroke-linecap: butt;
  fill: none;
  cursor: pointer;
  stroke-dasharray: 566 10 0;
  -webkit-transform: rotate(deg);
  -moz-transform: rotate(deg);
  -ms-transform: rotate(deg);
  transform: rotate(deg);
}

.cache-bkkt8z {
  transform-origin: 50% 50%;
  -webkit-transition: stroke-width 500ms ease;
  transition: stroke-width 500ms ease;
  stroke: #4F1A81;
  stroke-width: 23;
  stroke-linecap: butt;
  fill: none;
  cursor: pointer;
  stroke-dasharray: 283 566 10 0;
  -webkit-transform: rotate(0deg);
  -moz-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.cache-1n8z37h {
  transform-origin: 50% 50%;
  -webkit-transition: stroke-width 500ms ease;
  transition: stroke-width 500ms ease;
  stroke: #F4306C;
  stroke-width: 18;
  stroke-linecap: butt;
  fill: none;
  cursor: pointer;
  stroke-dasharray: 283 566 10 0;
  -webkit-transform: rotate(180deg);
  -moz-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.cache-esyp20 {
  font-size: 14px;
  list-style-type: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  cursor: pointer;
  height: -webkit-min-content;
  height: -moz-min-content;
  height: min-content;
}

.cache-1266m55 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 8px;
  width: 100%;
  color: #4f0599;
}

.cache-ki8u62 {
  width: 250px;
  height: 21px;
  position: absolute;
}

.cache-1fum7c4 {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  margin: 0 8px;
  background: #4F1A81;
  -webkit-animation: animation-0 linear 1500ms infinite;
  animation: animation-0 linear 1500ms infinite;
}

.cache-lvt6sf {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.cache-o07ik5 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 6px;
  font-weight: 500;
}

.cache-1g4cu73 {
  border-bottom: 1px solid #dce1eb;
  position: relative;
  width: 100%;
}

.cache-1rp01lo {
  border-bottom: 1px solid #4f0599;
  position: absolute;
  left: 0;
  top: 0;
  bottom: -1px;
  -webkit-transition: width 500ms ease;
  transition: width 500ms ease;
  width: 100%;
}

.cache-bzjscf {
  margin-left: 6px;
  font-weight: 500;
}

.cache-v2j833 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 8px;
  width: 100%;
  color: #4a4f62;
}

.cache-18thr6o {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  margin: 0 8px;
  background: #F4306C;
}

.cache-cowp5h {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 6px;
  font-weight: 400;
}

.cache-15dkpmo {
  border-bottom: 1px solid #4f0599;
  position: absolute;
  left: 0;
  top: 0;
  bottom: -1px;
  -webkit-transition: width 500ms ease;
  transition: width 500ms ease;
  width: 0%;
}

.cache-11jdo8f {
  margin-left: 6px;
  font-weight: 400;
}

<div
    class="cache-zjik7 emdn0ly1"
  >
    <div
      class="cache-1pk1k4u e18983st0"
    >
      <div
        class="cache-jvd5z6 e7ah3bn0"
      >
        <svg
          style="height: 206px; transform: rotate(-90deg); width: 206px;"
        >
          <defs />
          <circle
            class="cache-3ay86l e1tz6nb31"
            color="gray300"
            cx="103"
            cy="103"
            r="90"
            style="cursor: default;"
          />
          <circle
            class="cache-bkkt8z e1tz6nb31"
            color="#4F1A81"
            cx="103"
            cy="103"
            data-testid="test-chart-donut-compute"
            r="90"
          />
          <circle
            class="cache-1n8z37h e1tz6nb31"
            color="#F4306C"
            cx="103"
            cy="103"
            data-testid="test-chart-donut-gpu"
            r="90"
          />
        </svg>
      </div>
    </div>
    <ul
      class="cache-esyp20 efhpw7g8"
    >
      <div
        aria-describedby="test-chart-chart-tooltip-compute"
        tabindex="0"
      >
        <li
          class="cache-1266m55 efhpw7g7"
        >
          <div
            class="cache-ki8u62 efhpw7g2"
            data-testid="test-chart-chart-tooltip-compute"
          />
          <div
            class="cache-1fum7c4 efhpw7g6"
            color="#4F1A81"
          />
          <div
            class="cache-lvt6sf efhpw7g5"
          >
            <span
              class="cache-o07ik5 efhpw7g3"
            >
              Compute
            </span>
            <span
              class="cache-1g4cu73 efhpw7g1"
            >
              <span
                class="cache-1rp01lo efhpw7g0"
              />
            </span>
          </div>
          <div
            class="cache-bzjscf efhpw7g4"
          >
            20
          </div>
        </li>
      </div>
      <div
        aria-describedby="test-chart-chart-tooltip-gpu"
        tabindex="0"
      >
        <li
          class="cache-v2j833 efhpw7g7"
        >
          <div
            class="cache-ki8u62 efhpw7g2"
            data-testid="test-chart-chart-tooltip-gpu"
          />
          <div
            class="cache-18thr6o efhpw7g6"
            color="#F4306C"
          />
          <div
            class="cache-lvt6sf efhpw7g5"
          >
            <span
              class="cache-cowp5h efhpw7g3"
            >
              GPU Instances
            </span>
            <span
              class="cache-1g4cu73 efhpw7g1"
            >
              <span
                class="cache-15dkpmo efhpw7g0"
              />
            </span>
          </div>
          <div
            class="cache-11jdo8f efhpw7g4"
          >
            20
          </div>
        </li>
      </div>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`Chart renders correctly with data 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    stroke-dasharray: 3 566 10 0;
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    stroke-dasharray: 283 566 10 0;
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }
}

@keyframes animation-1 {
  from {
    stroke-dasharray: 3 566 10 0;
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    stroke-dasharray: 283 566 10 0;
    -webkit-transform: rotate(180deg);
    -moz-transform: rotate(180deg);
    -ms-transform: rotate(180deg);
    transform: rotate(180deg);
  }
}

.cache-zjik7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-1pk1k4u {
  display: none;
}

@media (min-width: 576px) {
  .cache-1pk1k4u {
    display: block;
  }
}

.cache-jvd5z6.cache-jvd5z6 {
  width: 206px;
  height: 206px;
  position: relative;
}

.cache-3ay86l {
  transform-origin: 50% 50%;
  -webkit-transition: stroke-width 500ms ease;
  transition: stroke-width 500ms ease;
  stroke: #dce1eb;
  stroke-width: 18;
  stroke-linecap: butt;
  fill: none;
  cursor: pointer;
  stroke-dasharray: 566 10 0;
  -webkit-transform: rotate(deg);
  -moz-transform: rotate(deg);
  -ms-transform: rotate(deg);
  transform: rotate(deg);
}

.cache-y3651l {
  transform-origin: 50% 50%;
  -webkit-transition: stroke-width 500ms ease;
  transition: stroke-width 500ms ease;
  stroke: #4F1A81;
  stroke-width: 18;
  stroke-linecap: butt;
  fill: none;
  cursor: pointer;
  -webkit-animation: animation-0 1s ease forwards;
  animation: animation-0 1s ease forwards;
}

.cache-1ei7e0e {
  transform-origin: 50% 50%;
  -webkit-transition: stroke-width 500ms ease;
  transition: stroke-width 500ms ease;
  stroke: #F4306C;
  stroke-width: 18;
  stroke-linecap: butt;
  fill: none;
  cursor: pointer;
  -webkit-animation: animation-1 1s ease forwards;
  animation: animation-1 1s ease forwards;
}

<div
    class="cache-zjik7 emdn0ly1"
  >
    <div
      class="cache-1pk1k4u e18983st0"
    >
      <div
        class="cache-jvd5z6 e7ah3bn0"
      >
        <svg
          style="height: 206px; transform: rotate(-90deg); width: 206px;"
        >
          <defs />
          <circle
            class="cache-3ay86l e1tz6nb31"
            color="gray300"
            cx="103"
            cy="103"
            r="90"
            style="cursor: default;"
          />
          <circle
            class="cache-y3651l e1tz6nb31"
            color="#4F1A81"
            cx="103"
            cy="103"
            data-testid="donut-compute"
            r="90"
          />
          <circle
            class="cache-1ei7e0e e1tz6nb31"
            color="#F4306C"
            cx="103"
            cy="103"
            data-testid="donut-gpu"
            r="90"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Chart renders correctly with data and content 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    stroke-dasharray: 3 566 10 0;
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    stroke-dasharray: 283 566 10 0;
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }
}

@keyframes animation-1 {
  from {
    stroke-dasharray: 3 566 10 0;
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    stroke-dasharray: 283 566 10 0;
    -webkit-transform: rotate(180deg);
    -moz-transform: rotate(180deg);
    -ms-transform: rotate(180deg);
    transform: rotate(180deg);
  }
}

.cache-zjik7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-1pk1k4u {
  display: none;
}

@media (min-width: 576px) {
  .cache-1pk1k4u {
    display: block;
  }
}

.cache-jvd5z6.cache-jvd5z6 {
  width: 206px;
  height: 206px;
  position: relative;
}

.cache-3ay86l {
  transform-origin: 50% 50%;
  -webkit-transition: stroke-width 500ms ease;
  transition: stroke-width 500ms ease;
  stroke: #dce1eb;
  stroke-width: 18;
  stroke-linecap: butt;
  fill: none;
  cursor: pointer;
  stroke-dasharray: 566 10 0;
  -webkit-transform: rotate(deg);
  -moz-transform: rotate(deg);
  -ms-transform: rotate(deg);
  transform: rotate(deg);
}

.cache-y3651l {
  transform-origin: 50% 50%;
  -webkit-transition: stroke-width 500ms ease;
  transition: stroke-width 500ms ease;
  stroke: #4F1A81;
  stroke-width: 18;
  stroke-linecap: butt;
  fill: none;
  cursor: pointer;
  -webkit-animation: animation-0 1s ease forwards;
  animation: animation-0 1s ease forwards;
}

.cache-1ei7e0e {
  transform-origin: 50% 50%;
  -webkit-transition: stroke-width 500ms ease;
  transition: stroke-width 500ms ease;
  stroke: #F4306C;
  stroke-width: 18;
  stroke-linecap: butt;
  fill: none;
  cursor: pointer;
  -webkit-animation: animation-1 1s ease forwards;
  animation: animation-1 1s ease forwards;
}

.cache-qcd8cv {
  display: inline-block;
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  top: 0;
  font-size: 25px;
  line-height: 100px;
  height: 100px;
  width: 100px;
  margin: auto;
  text-align: center;
  vertical-align: middle;
}

<div
    class="cache-zjik7 emdn0ly1"
  >
    <div
      class="cache-1pk1k4u e18983st0"
    >
      <div
        class="cache-jvd5z6 e7ah3bn0"
      >
        <svg
          style="height: 206px; transform: rotate(-90deg); width: 206px;"
        >
          <defs />
          <circle
            class="cache-3ay86l e1tz6nb31"
            color="gray300"
            cx="103"
            cy="103"
            r="90"
            style="cursor: default;"
          />
          <circle
            class="cache-y3651l e1tz6nb31"
            color="#4F1A81"
            cx="103"
            cy="103"
            data-testid="donut-compute"
            r="90"
          />
          <circle
            class="cache-1ei7e0e e1tz6nb31"
            color="#F4306C"
            cx="103"
            cy="103"
            data-testid="donut-gpu"
            r="90"
          />
        </svg>
        <div
          class="cache-qcd8cv e1tz6nb30"
        >
          Test
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Chart renders correctly with detailed legend 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    stroke-dasharray: 3 566 10 0;
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    stroke-dasharray: 283 566 10 0;
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }
}

@keyframes animation-1 {
  from {
    stroke-dasharray: 3 566 10 0;
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    stroke-dasharray: 283 566 10 0;
    -webkit-transform: rotate(180deg);
    -moz-transform: rotate(180deg);
    -ms-transform: rotate(180deg);
    transform: rotate(180deg);
  }
}

.cache-zjik7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-1pk1k4u {
  display: none;
}

@media (min-width: 576px) {
  .cache-1pk1k4u {
    display: block;
  }
}

.cache-jvd5z6.cache-jvd5z6 {
  width: 206px;
  height: 206px;
  position: relative;
}

.cache-3ay86l {
  transform-origin: 50% 50%;
  -webkit-transition: stroke-width 500ms ease;
  transition: stroke-width 500ms ease;
  stroke: #dce1eb;
  stroke-width: 18;
  stroke-linecap: butt;
  fill: none;
  cursor: pointer;
  stroke-dasharray: 566 10 0;
  -webkit-transform: rotate(deg);
  -moz-transform: rotate(deg);
  -ms-transform: rotate(deg);
  transform: rotate(deg);
}

.cache-y3651l {
  transform-origin: 50% 50%;
  -webkit-transition: stroke-width 500ms ease;
  transition: stroke-width 500ms ease;
  stroke: #4F1A81;
  stroke-width: 18;
  stroke-linecap: butt;
  fill: none;
  cursor: pointer;
  -webkit-animation: animation-0 1s ease forwards;
  animation: animation-0 1s ease forwards;
}

.cache-1ei7e0e {
  transform-origin: 50% 50%;
  -webkit-transition: stroke-width 500ms ease;
  transition: stroke-width 500ms ease;
  stroke: #F4306C;
  stroke-width: 18;
  stroke-linecap: butt;
  fill: none;
  cursor: pointer;
  -webkit-animation: animation-1 1s ease forwards;
  animation: animation-1 1s ease forwards;
}

.cache-esyp20 {
  font-size: 14px;
  list-style-type: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  cursor: pointer;
  height: -webkit-min-content;
  height: -moz-min-content;
  height: min-content;
}

.cache-v2j833 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 8px;
  width: 100%;
  color: #4a4f62;
}

.cache-ki8u62 {
  width: 250px;
  height: 21px;
  position: absolute;
}

.cache-1orotdq {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  margin: 0 8px;
  background: #4F1A81;
}

.cache-lvt6sf {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.cache-cowp5h {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 6px;
  font-weight: 400;
}

.cache-1g4cu73 {
  border-bottom: 1px solid #dce1eb;
  position: relative;
  width: 100%;
}

.cache-15dkpmo {
  border-bottom: 1px solid #4f0599;
  position: absolute;
  left: 0;
  top: 0;
  bottom: -1px;
  -webkit-transition: width 500ms ease;
  transition: width 500ms ease;
  width: 0%;
}

.cache-11jdo8f {
  margin-left: 6px;
  font-weight: 400;
}

.cache-18thr6o {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  margin: 0 8px;
  background: #F4306C;
}

<div
    class="cache-zjik7 emdn0ly1"
  >
    <div
      class="cache-1pk1k4u e18983st0"
    >
      <div
        class="cache-jvd5z6 e7ah3bn0"
      >
        <svg
          style="height: 206px; transform: rotate(-90deg); width: 206px;"
        >
          <defs />
          <circle
            class="cache-3ay86l e1tz6nb31"
            color="gray300"
            cx="103"
            cy="103"
            r="90"
            style="cursor: default;"
          />
          <circle
            class="cache-y3651l e1tz6nb31"
            color="#4F1A81"
            cx="103"
            cy="103"
            data-testid="donut-compute"
            r="90"
          />
          <circle
            class="cache-1ei7e0e e1tz6nb31"
            color="#F4306C"
            cx="103"
            cy="103"
            data-testid="donut-gpu"
            r="90"
          />
        </svg>
      </div>
    </div>
    <ul
      class="cache-esyp20 efhpw7g8"
    >
      <div
        aria-describedby="chart-tooltip-compute"
        tabindex="0"
      >
        <li
          class="cache-v2j833 efhpw7g7"
        >
          <div
            class="cache-ki8u62 efhpw7g2"
            data-testid="chart-tooltip-compute"
          />
          <div
            class="cache-1orotdq efhpw7g6"
            color="#4F1A81"
          />
          <div
            class="cache-lvt6sf efhpw7g5"
          >
            <span
              class="cache-cowp5h efhpw7g3"
            >
              Compute
            </span>
            <span
              class="cache-1g4cu73 efhpw7g1"
            >
              <span
                class="cache-15dkpmo efhpw7g0"
              />
            </span>
          </div>
          <div
            class="cache-11jdo8f efhpw7g4"
          >
            20
          </div>
        </li>
      </div>
      <div
        aria-describedby="chart-tooltip-gpu"
        tabindex="0"
      >
        <li
          class="cache-v2j833 efhpw7g7"
        >
          <div
            class="cache-ki8u62 efhpw7g2"
            data-testid="chart-tooltip-gpu"
          />
          <div
            class="cache-18thr6o efhpw7g6"
            color="#F4306C"
          />
          <div
            class="cache-lvt6sf efhpw7g5"
          >
            <span
              class="cache-cowp5h efhpw7g3"
            >
              GPU Instances
            </span>
            <span
              class="cache-1g4cu73 efhpw7g1"
            >
              <span
                class="cache-15dkpmo efhpw7g0"
              />
            </span>
          </div>
          <div
            class="cache-11jdo8f efhpw7g4"
          >
            20
          </div>
        </li>
      </div>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`Chart renders correctly with detailed legend and discount 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    stroke-dasharray: 3 566 10 0;
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    stroke-dasharray: 566 566 10 0;
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }
}

.cache-zjik7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-1pk1k4u {
  display: none;
}

@media (min-width: 576px) {
  .cache-1pk1k4u {
    display: block;
  }
}

.cache-jvd5z6.cache-jvd5z6 {
  width: 206px;
  height: 206px;
  position: relative;
}

.cache-3ay86l {
  transform-origin: 50% 50%;
  -webkit-transition: stroke-width 500ms ease;
  transition: stroke-width 500ms ease;
  stroke: #dce1eb;
  stroke-width: 18;
  stroke-linecap: butt;
  fill: none;
  cursor: pointer;
  stroke-dasharray: 566 10 0;
  -webkit-transform: rotate(deg);
  -moz-transform: rotate(deg);
  -ms-transform: rotate(deg);
  transform: rotate(deg);
}

.cache-piy4tg {
  transform-origin: 50% 50%;
  -webkit-transition: stroke-width 500ms ease;
  transition: stroke-width 500ms ease;
  stroke: url(#discount);
  stroke-width: 18;
  stroke-linecap: butt;
  fill: none;
  cursor: pointer;
  -webkit-animation: animation-0 1s ease forwards;
  animation: animation-0 1s ease forwards;
}

.cache-esyp20 {
  font-size: 14px;
  list-style-type: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  cursor: pointer;
  height: -webkit-min-content;
  height: -moz-min-content;
  height: min-content;
}

.cache-v2j833 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 8px;
  width: 100%;
  color: #4a4f62;
}

.cache-ki8u62 {
  width: 250px;
  height: 21px;
  position: absolute;
}

.cache-1h30o8p {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  margin: 0 8px;
  background: #F4306C;
  opacity: 0.6;
  border: 0.3px solid #F4306C;
  -webkit-background-size: 10px;
  background-size: 10px;
  background: repeating-linear-gradient(
      0deg,
      transparent,
      transparent 1px,
      #F4306C 1px,
      #F4306C 2px
    );
}

.cache-lvt6sf {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.cache-cowp5h {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 6px;
  font-weight: 400;
}

.cache-1g4cu73 {
  border-bottom: 1px solid #dce1eb;
  position: relative;
  width: 100%;
}

.cache-15dkpmo {
  border-bottom: 1px solid #4f0599;
  position: absolute;
  left: 0;
  top: 0;
  bottom: -1px;
  -webkit-transition: width 500ms ease;
  transition: width 500ms ease;
  width: 0%;
}

.cache-11jdo8f {
  margin-left: 6px;
  font-weight: 400;
}

<div
    class="cache-zjik7 emdn0ly1"
  >
    <div
      class="cache-1pk1k4u e18983st0"
    >
      <div
        class="cache-jvd5z6 e7ah3bn0"
      >
        <svg
          style="height: 206px; transform: rotate(-90deg); width: 206px;"
        >
          <defs>
            <pattern
              height="5"
              id="discount"
              patternUnits="userSpaceOnUse"
              width="5"
            >
              <circle
                cx="0"
                cy="0"
                fill="#ffffff"
                fill-opacity="1"
                r="10"
              />
              <line
                opacity="0.6"
                stroke="#F4306C"
                stroke-width="5"
                x1="0"
                x2="0"
                y1="0"
                y2="100"
              />
            </pattern>
          </defs>
          <circle
            class="cache-3ay86l e1tz6nb31"
            color="gray300"
            cx="103"
            cy="103"
            r="90"
            style="cursor: default;"
          />
          <circle
            class="cache-piy4tg e1tz6nb31"
            color="#F4306C"
            cx="103"
            cy="103"
            data-testid="donut-discount"
            r="90"
          />
        </svg>
      </div>
    </div>
    <ul
      class="cache-esyp20 efhpw7g8"
    >
      <div
        aria-describedby="chart-tooltip-discount"
        tabindex="0"
      >
        <li
          class="cache-v2j833 efhpw7g7"
        >
          <div
            class="cache-ki8u62 efhpw7g2"
            data-testid="chart-tooltip-discount"
          />
          <div
            class="cache-1h30o8p efhpw7g6"
            color="#F4306C"
          />
          <div
            class="cache-lvt6sf efhpw7g5"
          >
            <span
              class="cache-cowp5h efhpw7g3"
            >
              GPU Instances
            </span>
            <span
              class="cache-1g4cu73 efhpw7g1"
            >
              <span
                class="cache-15dkpmo efhpw7g0"
              />
            </span>
          </div>
          <div
            class="cache-11jdo8f efhpw7g4"
          >
            20
          </div>
        </li>
      </div>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`Chart renders correctly with empty legend placeholder 1`] = `
<DocumentFragment>
  .cache-zjik7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-1pk1k4u {
  display: none;
}

@media (min-width: 576px) {
  .cache-1pk1k4u {
    display: block;
  }
}

.cache-jvd5z6.cache-jvd5z6 {
  width: 206px;
  height: 206px;
  position: relative;
}

.cache-3ay86l {
  transform-origin: 50% 50%;
  -webkit-transition: stroke-width 500ms ease;
  transition: stroke-width 500ms ease;
  stroke: #dce1eb;
  stroke-width: 18;
  stroke-linecap: butt;
  fill: none;
  cursor: pointer;
  stroke-dasharray: 566 10 0;
  -webkit-transform: rotate(deg);
  -moz-transform: rotate(deg);
  -ms-transform: rotate(deg);
  transform: rotate(deg);
}

.cache-dwqz7h {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: 20px;
}

.cache-7vgu14 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
}

<div
    class="cache-zjik7 emdn0ly1"
  >
    <div
      class="cache-1pk1k4u e18983st0"
    >
      <div
        class="cache-jvd5z6 e7ah3bn0"
      >
        <svg
          style="height: 206px; transform: rotate(-90deg); width: 206px;"
        >
          <defs />
          <circle
            class="cache-3ay86l e1tz6nb31"
            color="gray300"
            cx="103"
            cy="103"
            r="90"
            style="cursor: default;"
          />
        </svg>
      </div>
    </div>
    <div
      class="cache-dwqz7h emdn0ly0"
    >
      <p
        class="e1g1zfwd0 cache-7vgu14 e7ah3bn0"
      >
        I am a legend
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Chart renders correctly with legend 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    stroke-dasharray: 3 566 10 0;
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    stroke-dasharray: 283 566 10 0;
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }
}

@keyframes animation-1 {
  from {
    stroke-dasharray: 3 566 10 0;
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    stroke-dasharray: 283 566 10 0;
    -webkit-transform: rotate(180deg);
    -moz-transform: rotate(180deg);
    -ms-transform: rotate(180deg);
    transform: rotate(180deg);
  }
}

.cache-zjik7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-1pk1k4u {
  display: none;
}

@media (min-width: 576px) {
  .cache-1pk1k4u {
    display: block;
  }
}

.cache-jvd5z6.cache-jvd5z6 {
  width: 206px;
  height: 206px;
  position: relative;
}

.cache-3ay86l {
  transform-origin: 50% 50%;
  -webkit-transition: stroke-width 500ms ease;
  transition: stroke-width 500ms ease;
  stroke: #dce1eb;
  stroke-width: 18;
  stroke-linecap: butt;
  fill: none;
  cursor: pointer;
  stroke-dasharray: 566 10 0;
  -webkit-transform: rotate(deg);
  -moz-transform: rotate(deg);
  -ms-transform: rotate(deg);
  transform: rotate(deg);
}

.cache-y3651l {
  transform-origin: 50% 50%;
  -webkit-transition: stroke-width 500ms ease;
  transition: stroke-width 500ms ease;
  stroke: #4F1A81;
  stroke-width: 18;
  stroke-linecap: butt;
  fill: none;
  cursor: pointer;
  -webkit-animation: animation-0 1s ease forwards;
  animation: animation-0 1s ease forwards;
}

.cache-1ei7e0e {
  transform-origin: 50% 50%;
  -webkit-transition: stroke-width 500ms ease;
  transition: stroke-width 500ms ease;
  stroke: #F4306C;
  stroke-width: 18;
  stroke-linecap: butt;
  fill: none;
  cursor: pointer;
  -webkit-animation: animation-1 1s ease forwards;
  animation: animation-1 1s ease forwards;
}

.cache-esyp20 {
  font-size: 14px;
  list-style-type: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  cursor: pointer;
  height: -webkit-min-content;
  height: -moz-min-content;
  height: min-content;
}

.cache-v2j833 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 8px;
  width: 100%;
  color: #4a4f62;
}

.cache-ki8u62 {
  width: 250px;
  height: 21px;
  position: absolute;
}

.cache-1orotdq {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  margin: 0 8px;
  background: #4F1A81;
}

.cache-lvt6sf {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.cache-cowp5h {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 6px;
  font-weight: 400;
}

.cache-1g4cu73 {
  border-bottom: 1px solid #dce1eb;
  position: relative;
  width: 100%;
}

.cache-15dkpmo {
  border-bottom: 1px solid #4f0599;
  position: absolute;
  left: 0;
  top: 0;
  bottom: -1px;
  -webkit-transition: width 500ms ease;
  transition: width 500ms ease;
  width: 0%;
}

.cache-11jdo8f {
  margin-left: 6px;
  font-weight: 400;
}

.cache-18thr6o {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  margin: 0 8px;
  background: #F4306C;
}

<div
    class="cache-zjik7 emdn0ly1"
  >
    <div
      class="cache-1pk1k4u e18983st0"
    >
      <div
        class="cache-jvd5z6 e7ah3bn0"
      >
        <svg
          style="height: 206px; transform: rotate(-90deg); width: 206px;"
        >
          <defs />
          <circle
            class="cache-3ay86l e1tz6nb31"
            color="gray300"
            cx="103"
            cy="103"
            r="90"
            style="cursor: default;"
          />
          <circle
            class="cache-y3651l e1tz6nb31"
            color="#4F1A81"
            cx="103"
            cy="103"
            data-testid="donut-compute"
            r="90"
          />
          <circle
            class="cache-1ei7e0e e1tz6nb31"
            color="#F4306C"
            cx="103"
            cy="103"
            data-testid="donut-gpu"
            r="90"
          />
        </svg>
      </div>
    </div>
    <ul
      class="cache-esyp20 efhpw7g8"
    >
      <div
        aria-describedby="chart-tooltip-compute"
        tabindex="0"
      >
        <li
          class="cache-v2j833 efhpw7g7"
        >
          <div
            class="cache-ki8u62 efhpw7g2"
            data-testid="chart-tooltip-compute"
          />
          <div
            class="cache-1orotdq efhpw7g6"
            color="#4F1A81"
          />
          <div
            class="cache-lvt6sf efhpw7g5"
          >
            <span
              class="cache-cowp5h efhpw7g3"
            >
              Compute
            </span>
            <span
              class="cache-1g4cu73 efhpw7g1"
            >
              <span
                class="cache-15dkpmo efhpw7g0"
              />
            </span>
          </div>
          <div
            class="cache-11jdo8f efhpw7g4"
          >
            20
          </div>
        </li>
      </div>
      <div
        aria-describedby="chart-tooltip-gpu"
        tabindex="0"
      >
        <li
          class="cache-v2j833 efhpw7g7"
        >
          <div
            class="cache-ki8u62 efhpw7g2"
            data-testid="chart-tooltip-gpu"
          />
          <div
            class="cache-18thr6o efhpw7g6"
            color="#F4306C"
          />
          <div
            class="cache-lvt6sf efhpw7g5"
          >
            <span
              class="cache-cowp5h efhpw7g3"
            >
              GPU Instances
            </span>
            <span
              class="cache-1g4cu73 efhpw7g1"
            >
              <span
                class="cache-15dkpmo efhpw7g0"
              />
            </span>
          </div>
          <div
            class="cache-11jdo8f efhpw7g4"
          >
            20
          </div>
        </li>
      </div>
    </ul>
  </div>
</DocumentFragment>
`;
